<resources>
    <string name="app_name">‘音’你不同</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">功能设置</string>
    <string name="menu_gallery">夜间模式</string>
    <string name="menu_slideshow">定时停止播放</string>
    <string name="menu_tools">关于应用</string>
    <string name="menu_share">退出应用</string>
    <string name="play_time_start">00:00</string>
    <string name="unknown">未知</string>
    <string name="setting_key_mobile_network_play">mobile_network_play</string>
    <string name="setting_key_mobile_network_download">mobile_network_download</string>
    <string name="setting_key_sound_effect">sound_effect</string>
    <string name="setting_key_filter_size">filter_size</string>
    <string name="setting_key_filter_time">filter_time</string>
    <string name="music_info">歌曲信息</string>
    <string name="delete_music">删除%s？</string>
    <string name="delete">删除</string>
    <string name="song_list_item_title_1">1.%1$s - %2$s</string>
    <string name="song_list_item_title_2">2.%1$s - %2$s</string>
    <string name="song_list_item_title_3">3.%1$s - %2$s</string>
    <string name="loading">努力加载中…</string>
    <string name="load_fail">加载失败，请检查网络后重试</string>
    <string name="network">网络</string>
    <string name="mobile_network_play">使用移动网络播放</string>
    <string name="mobile_network_download">使用移动网络下载</string>
    <string name="play">播放</string>
    <string name="sound_effect">音效调节</string>
    <string name="device_not_support">您的设备不支持此功能</string>
    <string name="menu_timer">定时停止播放</string>
    <string name="timer_set">设置成功，将于%s分钟后关闭</string>
    <string name="timer_cancel">定时停止播放已取消</string>

</resources>
