<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/setting"
            android:title="@string/menu_home"
            />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/time"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/about"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/close_pic"
            android:title="@string/menu_share" />
    </group>

</menu>
